@@ -35,8 +35,8 @@ function onGameInit()
 	MinesNum = 0
 	Explosives = 0
 
-	AddTeam(loc("Wannabe Flyboys"), -1, "Simple", "Island", "Default", "cm_scout")
-	player = AddHog(loc("Ace"), 0, 80, "Gasmask")
+	AddMissionTeam(-1)
+	player = AddMissionHog(80)
 	SetGearPosition(player, 1380, 1500)
 
 end
